# Natsurobo2026

./: .gitignore  Natsurobo2026.code-workspace  README.md  control_flow_chart.md  package-lock.json  terst.md  zakiomni.cpp  zakiomni.hpp
.github/workflows/: main_jazzy_build_and_test.yml
cage_detection/: CMakeLists.txt  package.xml
cage_detection/config/: cage_detection.yaml
cage_detection/launch/: cage_detection.launch.py  cage_detection_viz.launch.py
cage_detection/msg/: Cage.msg  CageArray.msg
cage_detection/rviz/: cage_detection.rviz
cage_detection/scripts/: cage_visualizer.py
cage_detection/src/: cage_detection_node.cpp  cage_detection_node.cpp.bak
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/shooting_control/share/shooting_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
manual_control_natsu26/: CMakeLists.txt  package.xml
manual_control_natsu26/src/: mc_2026.cpp
manual_controll_natsu26/: CMakeLists.txt  package.xml
manual_controll_natsu26/src/: mc_2026.cpp
natsu_console_2026/: .gitignore  README.md  package-lock.json  package.json  start.sh  start_docker.sh
natsu_console_2026/public/: index.html  manifest.json  simulator.html
natsu_console_2026/src/: App.css  App.js
natsu_console_2026/src/components/: AmmoScoreCounter.js  BasketMonitor.js  CageViz.js  GamePanel.css  GamePanel.js  OdomMap.js  TimerPhaseController.js  VGoalChecker.js
natsu_console_2026/src/i18n/: dictionary.js  index.js
natsu_console_2026/src/store/: GameState.js
natsu_console_2026/tools/: console_backend.js  git-version.js
natsu_detection/: .gitignore  CMakeLists.txt  package.xml
natsu_detection/config/: wall_detection.yaml
natsu_detection/launch/: wall_detection_only.launch.py
natsu_detection/src/: wall_detection_node.cpp
natsu_drive_v26/: CMakeLists.txt  package.xml
natsu_drive_v26/include/natsu_drive_v26/: matrix.h
natsu_drive_v26/src/: matrix.cpp  zakiomni.cpp  zakiomni.hpp
natsu_localization/: CMakeLists.txt  package.xml
natsu_localization/config/: field_map.yaml
natsu_localization/launch/: localization.launch.py
natsu_localization/src/: scan_matcher_localizer.cpp
natsu_metry26/: CMakeLists.txt  package.xml
natsu_metry26/src/: matrix.cpp  natsu2026_odometry.cpp  natsu2026_odometry.hpp  summer2026_odometry.cpp  summer2026_odometry.hpp
natsu_o_ctrl/: CMakeLists.txt  package.xml
natsu_o_ctrl/launch/: natsu_o_ctrl.launch.py
natsu_o_ctrl/src/: natsu_o_ctrl.cpp
natsu_odrive/: setup.py
natsu_odrive/launch/: odrive.launch.py  odrive_single.launch.py
natsu_odrive/natsu_odrive/: odrive_node.py
natsu_practice/: serial_Bridge_Host.cpp
natsu_senser/: .gitignore  CMakeLists.txt  imu_monitor.html  mpu9250_esp32.ino  package.xml  platformio.ini
natsu_senser/src/: imu_publisher.cpp  mpu9250_esp32.ino
natsurobo_early_access/: CMakeLists.txt  package.xml  zakiomni.cpp  zakiomni.hpp
natsurobo_early_access/include/: mat.h
natsurobo_early_access/include/natsurobo_early_access/: mat.h
natsurobo_early_access/src/: mat.cpp  matrix.cpp  mc_2026.cpp  summer2026_odometry.cpp  summer2026_odometry.hpp  zakiomni.cpp  zakiomni.hpp
odrive_ctrl/: package.xml  setup.cfg
odrive_ctrl/launch/: odrive.launch.py
odrive_ctrl/resource/odrive_ctrl/: configure_odrive.py  odrive_node.py
odrive_ros2_control/odrive_demo_bringup/launch/: odrive_diffbot.launch.py  odrive_multi_interface.launch.py  odrive_rrbot.launch.py
odrive_ros2_control/odrive_demo_description/urdf/: odrive.ros2_control.xacro
odrive_ros2_control/odrive_hardware_interface/: CMakeLists.txt
odrive_ros2_control/odrive_hardware_interface/include/odrive_hardware_interface/: odrive_hardware_interface.hpp
odrive_ros2_control/odrive_hardware_interface/src/: odrive_hardware_interface.cpp
sensor_viz/: CMakeLists.txt  package.xml
sensor_viz/launch/: bringup_all.launch.py  sensor_test.launch.py
sensor_viz/rviz/: sensor_test.rviz
sensor_viz/scripts/: sensor_visualizer.py
shooting_control/: .gitignore  CMakeLists.txt  package.xml
shooting_control/config/: shooting_control.yaml
shooting_control/launch/: shooting_control.launch.py
shooting_control/msg/: ShooterCommand.msg
shooting_control/src/: shooting_control_node.cpp
unaginobori2026/: CMakeLists.txt  package.xml
unaginobori2026/src/: 101mm.cpp
upper_control_natsu26/: CMakeLists.txt  package.xml
upper_control_natsu26/src/: 101mm.cpp
