<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_detection</name>
  <version>2.0.0</version>
  <description>
    Wall/target detection node using 2D LiDAR for RRST 夏ロボ 2026.
    Publishes wall angle and perpendicular distance for shooting control.
  </description>
  <maintainer email="rrst@example.com">RRST NHK Project</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
