<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>natsu_odrive</name>
  <version>0.1.0</version>
  <description>ODrive v3.6 (firmware 0.5.6) を USB 経由で制御する ROS2 ノード（Natsurobo2026）</description>
  <maintainer email="you@example.com">RRST-NHK-Project</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- odrive Python ライブラリは pip で入れるため、ここには書かない -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
