<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_viz</name>
  <version>1.0.0</version>
  <description>足回りセンサテスト用 RViz2 可視化パッケージ (壁検出 + WT901C IMU + オドメトリ)</description>
  <maintainer email="rrst@example.com">RRST NHK Project</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>wall_detection</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
